InnoDB: parse CONSTRAINT FOREIGN KEY correctly (Bug #3332)